<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_turn_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turn_on_service" />

        <CheckBox
            android:id="@+id/checkbox_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preview_status_bar" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left" />

            <RadioButton
                android:id="@+id/radio_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/center" />

            <RadioButton
                android:id="@+id/radio_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right" />
        </RadioGroup>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>